--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,9 +3,10 @@
     <string-array name="names">
         <item>Егор</item>
         <item>Андрей</item>
-
-
+        <item>Маша</item>
+        <item>Света</item>
+        <item>Максим</item>
+        <item>Петр</item>
     </string-array>
-
 
 </resources>
