--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,8 +33,10 @@
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/image" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -76,5 +78,21 @@
         app:layout_constraintEnd_toEndOf="@+id/edA"
         app:layout_constraintStart_toStartOf="@+id/edA"
         app:layout_constraintTop_toBottomOf="@+id/edA" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="392dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:backgroundTint="@color/user"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/edB"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/edB"
+        app:layout_constraintTop_toBottomOf="@+id/edB"
+        app:layout_constraintVertical_bias="0.0"
+        app:strokeColor="#000000"
+        app:strokeWidth="1dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
